# gsr

./: .gitignore  LICENSE  README.md  pyproject.toml
gsr/: __init__.py  gapi.py
