[project]
name = "gsr"
version = "1.0.0"
authors = [
    { name = "ritonun", email = "73615644+ritonun@users.noreply.github.com" },
]
description = "Google Sheet Downloader"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "google-api-python-client==2.172.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
]

[project.urls]
Homepage = "https://github.com/ritonun/gsr"
Issues = "https://github.com/ritonun/gsr/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
